# ferrispad

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  FerrisPad.desktop  LICENSE  PHILOSOPHY.md  README.md  SECURITY.md  build.rs  ferrispad.desktop  install-desktop.sh  install.sh  uninstall.sh
.github/: discussions_welcome.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: release.yml
docs/: CNAME  index.html  robots.txt  sitemap.xml
docs/assets/binaries/: README.md
docs/css/: style.css
docs/guides/: BUILD_GUIDE.md  RELEASE_PROCESS.md  WINDOWS_CROSS_COMPILE.md
docs/js/: main.js
scripts/: build-releases.sh  bump-version.sh  generate-icons.sh  install-desktop.sh  release.sh  test-installation.sh  uninstall-desktop.sh
src/: dispatch.rs  main.rs  settings.rs  updater.rs
src/app/: buffer_utils.rs  document.rs  error.rs  file_filters.rs  highlight_controller.rs  messages.rs  mod.rs  platform.rs  preview_controller.rs  session.rs  settings.rs  state.rs  tab_manager.rs  text_ops.rs  update_controller.rs  updater.rs
src/app/controllers/: file.rs  highlight.rs  hook_dispatch.rs  mod.rs  plugin.rs  preview.rs  session.rs  tabs.rs  update.rs  view.rs  widget.rs
src/app/domain/: document.rs  messages.rs  mod.rs  settings.rs
src/app/infrastructure/: buffer.rs  defer.rs  error.rs  mod.rs  platform.rs
src/app/mcp/: mod.rs  protocol.rs  tools.rs
src/app/plugins/: annotations.rs  api.rs  diff.rs  hook_dispatch.rs  hook_result_parser.rs  hooks.rs  loader.rs  mod.rs  runtime.rs  security.rs
src/app/plugins/api/: commands.rs  editor.rs  filesystem.rs  mod.rs  sandbox.rs
src/app/plugins/widgets/: mod.rs  split_view.rs  terminal_view.rs  tree_view.rs
src/app/services/: editor_context.rs  file_size.rs  font_catalog.rs  mod.rs  plugin_registry.rs  plugin_update_checker.rs  plugin_verify.rs  session.rs  shortcut_registry.rs  text_ops.rs  updater.rs  yaml_parser.rs
src/app/services/syntax/: checkpoint.rs  highlighter.rs  mod.rs  style_map.rs
src/app/services/terminal/: grid.rs  mod.rs  pty.rs  vte_handler.rs
src/app/syntax/: checkpoint.rs  highlighter.rs  mod.rs  style_map.rs
src/ui/: diagnostic_panel.rs  editor_container.rs  file_dialogs.rs  main_window.rs  menu.rs  mod.rs  preview_window.rs  split_panel.rs  start_page.rs  status_bar.rs  tab_bar.rs  terminal_panel.rs  theme.rs  toast.rs  tree_panel.rs
src/ui/dialogs/: about.rs  community_install.rs  find.rs  font_picker.rs  goto_line.rs  large_file.rs  mod.rs  plugin_config.rs  plugin_manager.rs  plugin_permissions.rs  plugin_settings.rs  readonly_viewer.rs  session_picker.rs  settings_dialog.rs  shortcut_dialog.rs  update.rs
tests/: diff_and_highlights.rs  lua_sandbox_integration.rs  plugin_loading_chain.rs  plugin_manager_changes.rs  plugin_registry_fetch.rs  plugin_security_chain.rs  plugin_verify_chain.rs  session_roundtrip.rs  settings_persistence.rs  shortcut_registry_integration.rs
tests/common/: mod.rs
